<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/OrganizationDark">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        tools:context="com.example.lawre.myapplication.OrganizationMeeting"
        android:weightSum="1">

        <!-- TODO: Update blank fragment layout -->


        <RelativeLayout>
            <TextView
                android:id="@+id/view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/View_Title"
                android:textAppearance="?android:attr/textAppearanceLarge"


                android:textColor="@color/white" />
        </RelativeLayout>



        <EditText
            android:id="@+id/edit_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Enter_Title"
            android:textColorHint="?android:attr/colorButtonNormal"
            android:inputType="textShortMessage"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/view_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            />

        <RelativeLayout>


            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"

                android:layout_marginTop="12dp"
                android:text="@string/no_date_set_string" />

            <Button

                android:id="@+id/Picker_datebutton"

                android:text="@string/choose_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout>


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:text="@string/no_time_set_string" />
            <Button
                android:text="@string/choose_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/choose_timer"

                android:layout_centerHorizontal="true" />
        </RelativeLayout>




        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_below="@+id/Enter_location"
            android:layout_alignEnd="@+id/Enter_location"
            android:layout_marginTop="14dp"
            android:id="@+id/edit_object"
            android:hint="@string/Enter_Objective_String"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@color/white"
            android:layout_weight="0.37" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Enter_location"
            android:hint="@string/Enter_Location_String"


            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/edit_Name"
            android:layout_weight="0.14" />


        <TableRow>



            <Button
                android:layout_marginTop="15dp"
                android:text="@string/Submit_Organization_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:id="@+id/submit_button"
                />


            <Button
                android:text="@string/Cancel_Organization_button"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cancel_button"
                android:layout_alignParentStart="true" />

        </TableRow>


    </TableLayout>
</ScrollView>
