<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lawre.myapplication.loginModule.RegisterActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/btnRegister"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameString" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/txtName" />

        <TextView
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneString" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtPhone" />

        <TextView
            android:text="@string/prompt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailString" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwdString" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword" />

        <CheckBox
            android:text="@string/showPwd"
            android:layout_width="match_parent"
            android:onClick="showPassword"
            android:layout_height="wrap_content"
            android:id="@+id/chkShowPwd" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="231dp"
            app:srcCompat="@drawable/ic_person_pin_black_24dp"
            android:id="@+id/imagePreview" />

        <Button
            android:text="Choose Image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chooseImage"
            android:id="@+id/btnImg" />

        <Button
            android:text="@string/register"
            android:onClick="register"
            android:layout_marginTop="100px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
